--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=com.example.vhr.model
 mybatis.mapper-locations=classpath:com/example/vhr/mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
+
+# \u65E5\u5FD7\u914D\u7F6E
+logging.config=classpath:logback.xml
