验证码 分页

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 # \u65E5\u5FD7\u914D\u7F6E
 logging.config=classpath:logback.xml
+
+# pagehelper\u914D\u7F6E
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
